css/main.css
html {
  background: #ccc;
  font-family: proxima-nova,"Helvetica Neue",Helvetica,Arial,sans-serif;
}

.story {
  max-width: 800px;
  min-width: 300px;
  margin-left: auto;
  margin-right: auto;
  text-align: center;
}

#help {
  background: #777;
  color: #ccc;
  font-weight: bold;
  text-align: center;
  cursor: pointer;
  border-radius: 100px;
  width: 25px;
  line-height: 25px;
  font-size: 12pt;
  margin-left: auto;
  margin-right: auto;
  display: inline-block;
}

#help-text {
  max-width:250px;
  margin-right:auto;
  margin-left:auto;
  font-size:10pt;
  text-align: left;
  background: #eee;
  border-radius: 5px;
  padding: 5px;
}

.footer {
  max-width: 800px;
  margin-left: auto;
  margin-right: auto;
  text-align: center;
  font-size: 9pt;
  color: #888;
}

h1 {
  line-height: 30px;
  display: inline-block;
}

a {
  color: #666;
}

a:hover {
  color: #333;
}

.icon {
  width: 75px;
  border: 3px solid #000;
  border-radius: 5px;
  cursor: pointer;
  margin: 2px;
}

input[type="text"] {
  background: #fff;
  border: 2px solid #333;
  padding: 5px;
  text-align: center;
  border-radius: 5px;
}

input[type="button"], input[type="submit"] {
  background: #333;
  color: #aaa;
  border-radius: 100px;
  border: 0px;
  font-weight: bold;
  padding: 5px 7px 5px 7px;
  cursor: pointer;
} 

